articles z-index fixed

--- a/styles/header/Header.module.scss
+++ b/styles/header/Header.module.scss
@@ -5,6 +5,7 @@
 .header {
     position: relative;
     overflow: hidden;
+    z-index: 3;
 }
 
 .header:before {
