--- a/styles/main/sections/abeokuta-visits.module.scss
+++ b/styles/main/sections/abeokuta-visits.module.scss
@@ -3,7 +3,7 @@
     &:nth-child(3) {
       background-color: #fff;
       position: relative;
-      z-index: 1;
+      z-index: 2;
       &::after {
         content: "";
         position: absolute;
