--- a/styles/main/sections/dark-past.module.scss
+++ b/styles/main/sections/dark-past.module.scss
@@ -3,6 +3,8 @@
     &:nth-child(6) {
       background-color: #434342;
       position: relative;
+      z-index: 1;
+
       &::before {
         content: "";
         position: absolute;
