--- a/styles/main/sections/family-house.module.scss
+++ b/styles/main/sections/family-house.module.scss
@@ -2,6 +2,8 @@
   article {
     &:nth-child(5) {
       background-color: #efe0c9;
+      position: relative;
+      z-index: 0;
     }
   }
 }
