--- a/styles/main/sections/macaulay-connection.module.scss
+++ b/styles/main/sections/macaulay-connection.module.scss
@@ -3,6 +3,7 @@
     &:nth-child(4) {
       background-color: #e0d3ce;
       position: relative;
+      z-index: 1;
       &::after {
         content: "";
         position: absolute;
