--- a/styles/main/sections/spanish-migrant.module.scss
+++ b/styles/main/sections/spanish-migrant.module.scss
@@ -2,6 +2,7 @@
   article {
     &:nth-child(1) {
       background-color: #fffdfa;
+      position: 2;
     }
   }
 }
